# alchemygame

./: .gitignore  .gitmodules  CMakeLists.txt
res/textures/: player.ase
src/: alchemy.cpp  alchemy.h  enums.h  main.cpp  mathf.h  namegen.cpp  namegen.h  window.cpp  window.h
src/graphics/: CMakeLists.txt  texture.cpp  texture.h
src/objects/: AlchemyObject.h  CMakeLists.txt  Potion.cpp  Potion.h  entity.cpp  entity.h
src/objects/Alchemy/: AlchemyObject.cpp  AlchemyObject.h  CMakeLists.txt
src/types/: CMakeLists.txt  matrix.cpp  matrix.h
src/window/: CMakeLists.txt  events.cpp  events.h  window.cpp  window.h
